-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 17.0.1
-
None
-
-
42c1ed628 (master)
After setting the value of Coco Directory in Preferences > Coco, the plugin still says that "Coco is not installed correctly".
When you open the Preferences dialog, the field for Coco Directory is empty again.
For Gerrit Dashboard: QTCREATORBUG-33476 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
675345,2 | Make Coco plugin recognize Coco on macOS correctly | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |