Make Coco plugin recognize Coco on macOS correctly

In contrast to Linux, the executables of Coco on macOS are not in a
bin/ subdirectory but directly in /Applications/SquishCoco (or in
another directory chosen at installation time).

To verify that the user has selected a valid Coco directory, the
plugin checks that it constains a coveragescanner executable; so until
now, the plugin did not work on macOS.

(For its highlighting functionality, the plugin also needs to find
CoverageBrowser.)

Fixes: QTCREATORBUG-33476
Change-Id: I3c115733282524c37444ad5d2604aa58e26d7138
Reviewed-by: David Schulz <david.schulz@qt.io>